Fixed Text Overflow Problem

--- a/src/client/scss/screens/_posting.scss
+++ b/src/client/scss/screens/_posting.scss
@@ -12,23 +12,37 @@
     width: 100%;
     height: max-content;
     margin-top: 80px;
-    & small {
-      color: $border;
-      font-size: 12px;
-    }
-    & h1 {
-      margin-bottom: 10px;
-      font-size: 40px;
-      text-align: center;
-      font-weight: 700;
-      color: $font;
-    }
     & .posting_info {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
       justify-content: flex-end;
       margin-bottom: 3px;
+      & small {
+        color: $border;
+        font-size: 12px;
+      }
+      & h1 {
+        display: inline-block;
+        width: 500px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        white-space: normal;
+        line-height: 1.2;
+        max-height: 2.4em;
+        text-align: left;
+        word-wrap: break-word;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+
+        margin-bottom: 10px;
+        font-size: 40px;
+        font-weight: 700;
+        color: $font;
+      }
       & .posting_meta {
         gap: 5px;
         display: flex;
