--- a/src/client/scss/screens/_postings.scss
+++ b/src/client/scss/screens/_postings.scss
@@ -62,6 +62,10 @@
     margin-left: 10px;
     text-decoration: none;
     color: $font;
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
